fretboard notes text vertical align fixed

--- a/src/component/GuitarNeck/GuitarNeck.less
+++ b/src/component/GuitarNeck/GuitarNeck.less
@@ -67,7 +67,7 @@ svg.guitar-neck {
                 fill: #333;
                 font-size: 10px;
                 text-anchor: middle;
-                alignment-baseline: middle;
+                dominant-baseline: middle;
             }
         } 
     }
